reservation init and testing init

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
     "psr-4": {
       "CopyaRestaurant\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "classmap": [
+      "tests/RestaurantTestCase.php"
+    ]
   }
 }
