--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "codigu/categories": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.*",
+    "phpunit/phpunit": "4.*"
   },
   "autoload": {
     "psr-4": {
