--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=5.6.4",
     "codigu/copya": "dev-master",
-    "codigu/categories": "dev-master"
+    "codigu/categories": "dev-master",
+    "barryvdh/laravel-cors": "0.3"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*"
