--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=5.6.4",
     "codigu/copya": "dev-master",
     "codigu/categories": "dev-master",
-    "barryvdh/laravel-cors": "0.3"
+    "syscover/shopping-cart": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*"
