--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "php": ">=5.6.4",
     "codigu/copya": "dev-master",
     "codigu/categories": "dev-master",
-    "gloudemans/shoppingcart": "^2.3.0"
+    "gloudemans/shoppingcart": "^2.3.0",
+    "netshell/paypal": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*"
