--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "codigu/copya": "dev-master",
     "codigu/categories": "dev-master",
     "gloudemans/shoppingcart": "^2.3.0",
-    "netshell/paypal": "dev-master"
+    "netshell/paypal": "1.1"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*"
