--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "codigu/copya": "dev-master",
     "codigu/categories": "dev-master",
     "gloudemans/shoppingcart": "^2.3.0",
-    "netshell/paypal": "1.1"
+    "netshell/paypal": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "4.*"
@@ -26,5 +26,6 @@
   },
   "scripts": {
     "test": "phpunit"
-  }
+  },
+  "minimum-stability": "dev"
 }
